--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,7 +76,7 @@ jobs:
           - '1.4.*'
     steps:
       - name: Checkout
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683
         with:
           ref: '${{ github.head_ref }}'
       - name: Confirm current branch with remote
@@ -84,7 +84,7 @@ jobs:
           echo "Current branch with remote: $(git rev-parse --abbrev-ref --symbolic-full-name @{u})"
 
       - name: Setup Go
-        uses: actions/setup-go@v5.3.0 # v5.0.1
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
         with:
           go-version-file: 'go.mod'
           cache: true
